# ufanet_intercom_api

./: .gitignore  .gitlab-ci.yml  Dockerfile  LICENSE  README.md  app.py  pyproject.toml  requirements.txt  setup.cfg  ufanet_intercom_api.py
ufanet_intercom_api/: __init__.py  exceptions.py  logger.py  models.py  wrapper.py
